@@ -11,7 +11,7 @@ of a dynamically typed language named [smalljs](smalljs.md) which is almost a su
 
 How to compile and create a jar
 ---
-run Maven with a Java 19
+run Maven with a Java 21
 ```
   mvn package
 ```
@@ -19,10 +19,10 @@ a jar named smalljs-1.0.jar in the folder `target` is generated
 
 How to run it
 ---
-Still with Java 19
+Still with Java 21
 ```
-  java --enable-preview --class-path lib/tatoo-runtime.jar:target/smalljs-1.0.jar fr.umlv.smalljs.main.Main ast samples/hello.js
-  java --enable-preview --class-path lib/tatoo-runtime.jar:target/smalljs-1.0.jar fr.umlv.smalljs.main.Main stack samples/hello.js
-  java --enable-preview --class-path lib/tatoo-runtime.jar:target/smalljs-1.0.jar fr.umlv.smalljs.main.Main jvm samples/hello.js
+  java --class-path lib/tatoo-runtime.jar:target/smalljs-1.0.jar fr.umlv.smalljs.main.Main ast samples/hello.js
+  java --class-path lib/tatoo-runtime.jar:target/smalljs-1.0.jar fr.umlv.smalljs.main.Main stack samples/hello.js
+  java --class-path lib/tatoo-runtime.jar:target/smalljs-1.0.jar fr.umlv.smalljs.main.Main jvm samples/hello.js
 ```
 with 'ast' being the AST interpreter, 'stack' being the Stack based interpreter and 'jvm' being the JVM based interpreter.
